Installing express module and implementing basic routing

--- a/views/about.html
+++ b/views/about.html
@@ -5,8 +5,10 @@
     <title>Blogging - About</title>
 </head>
 <body>
+    <h1>Blogging project</h1>
+
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-    Tempore alias vero ratione libero dolores mollitia consequatur in officia perspiciatis nemo vitae,
+     Tempore alias vero ratione libero dolores mollitia consequatur in officia perspiciatis nemo vitae,
     hic eum, labore harum iure! Modi a minus adipisci.</p>
 </body>
 </html>
