Partials support added and css. Ejs include function implemented

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,22 +1,8 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blogging project</title>
-</head>
+    <%- include('./partials/head.ejs') %>
 <body>
 
-    <nav>
-        <div class="site-title">
-            <a href="/"><h1>Blog Project</h1></a>
-            <p>A Free Blogging project site</p>
-        </div>
-        <ul>
-            <li><a href="/">Blogs</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/blogs/create">New Blog</a></li>
-        </ul>
-    </nav>
+    <%- include('./partials/nav.ejs') %>
 
     <div class="about content">
         <h2>About us</h2>
@@ -24,6 +10,6 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim nisi voluptas ducimus odit nesciunt fuga.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim nisi voluptas ducimus odit nesciunt fuga.</p>
     </div>
-    
+    <%- include('./partials/footer.ejs') %>
 </body>
 </html>
