--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,26 +1,12 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blogging project</title>
-</head>
+    <%- include('./partials/head.ejs') %>
 <body>
 
-    <nav>
-        <div class="site-title">
-            <a href="/"><h1>Blog Project</h1></a>
-            <p>A Free Blogging project site</p>
-        </div>
-        <ul>
-            <li><a href="/">Blogs</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/blogs/create">New Blog</a></li>
-        </ul>
-    </nav>
+    <%- include('./partials/nav.ejs') %>
 
     <div class="not-found content">
         <h2>404 - Page not found</h2>
     </div>
-    
+    <%- include('./partials/footer.ejs') %>
 </body>
 </html>
